REFACTOR 그래프 ui 수정, 그래프 x축 값 년월일 추가 그래프 최대치 최소치 동적 변경 및 앱 아이콘 수정

--- a/app/src/main/res/layout/fragment_graph_framgment.xml
+++ b/app/src/main/res/layout/fragment_graph_framgment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GraphFragment"
-    android:background="#beebfd">
+    android:background="#dddddd">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
                 android:id="@+id/linearLayoutCompat"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#96DEF3"
+                android:background="#8CACF1"
                 android:gravity="center"
                 android:elevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:background="@color/white"
+                android:background="#FAFAFA"
                 android:elevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
