--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainFragment"
-    android:background="#beebfd">
+    android:background="#dddddd">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
                 android:id="@+id/linearLayoutCompat"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#96DEF3"
+                android:background="#8CACF1"
                 android:elevation="5dp"
                 android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent">
