--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -17,7 +17,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#beebfd">
+            android:background="#dddddd">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/customlayout01"
@@ -511,7 +511,7 @@
                 android:id="@+id/linearLayoutCompat"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#96DEF3"
+                android:background="#8CACF1"
                 android:elevation="5dp"
                 android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent">
