fix -> 메인 모니터링 현재 상태 표시 잘못된 데이터 수정

--- a/app/src/main/res/layout/fragment_graph_framgment.xml
+++ b/app/src/main/res/layout/fragment_graph_framgment.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.GraphFragment"
-    android:background="#dddddd">
+    android:background="#F3F3F3"
+    tools:context=".View.GraphFragment">
 
     <ScrollView
         android:layout_width="match_parent"
