--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View.MainFragment"
-    android:background="#EFEFEF">
+    android:background="#F3F3F3">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -201,9 +201,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:background="#fa5252"
+                            android:fontFamily="@font/juaregular"
                             android:gravity="center"
                             android:text="수온 (℃)"
-                            android:fontFamily="@font/juaregular"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
                             android:textColor="@color/white"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -219,8 +219,8 @@
                             android:layout_marginStart="60dp"
                             android:layout_marginTop="15dp"
                             android:layout_marginBottom="15dp"
-                            android:text="현재 수온"
                             android:fontFamily="@font/juaregular"
+                            android:text="현재 수온"
                             android:textColor="@color/black"
                             android:textSize="25dp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -232,8 +232,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
-                            android:text="℃"
                             android:fontFamily="@font/juaregular"
+                            android:text="℃"
                             android:textColor="@color/black"
                             android:textSize="25dp"
                             android:textStyle="bold"
@@ -246,8 +246,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="20dp"
-                            android:text="현재 상태"
                             android:fontFamily="@font/juaregular"
+                            android:text="현재 상태"
                             android:textColor="@color/black"
                             android:textSize="25dp"
                             app:layout_constraintBottom_toBottomOf="@+id/textview8"
@@ -259,9 +259,9 @@
                             android:layout_width="15dp"
                             android:layout_height="15dp"
                             android:layout_marginEnd="60dp"
-                            android:fontFamily="@font/juaregular"
                             android:background="@drawable/white_edge"
                             android:elevation="10dp"
+                            android:fontFamily="@font/juaregular"
                             app:layout_constraintBottom_toBottomOf="@+id/textView3"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/textView3" />
